Updated CSS, HTML, and JS files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/style.css"/>
     <title>Phase 1 Project</title>
   </head>
+  
   <body>
     <header>
       <h2><a href="https://fontmeme.com/fonts/bob-s-burgers-font/"><img src="https://fontmeme.com/permalink/220308/f64f5cf785822fa6502750893894bbea.png" alt="bob-s-burgers-font" border="0"></a></h2>
@@ -34,10 +35,9 @@
       <p id="characterAge">character age</p>
       <p id="characterVoiceActor">character voiced by</p>
       <p id="characterFirstEpisode">First episode character appeared in</p>
-      <form id="button">
       <button id="likeButton">
-        <span id="characterLike">♡</span>
-      </form>
+        <span id="likes">0</span>
+        🍔
       </button>
     </div>
     <div>
@@ -46,10 +46,5 @@
         <!-- Character Names go here -->
       </ul>
     </div>
-    <!-- Comment Section -->
-    <section id="wrapper">
-      <aside class="card">
-      </aside>
-      </section>
   </body>
 </html>
