--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div id = comments>
     <form>
-      <input type="text" id="comment-box" placeholder="I know all websites are good, but this is amazing. - Louise Belcher">
+      <input type="text" id="comment-box" onfocus="this.value=''" placeholder="I know all websites are good, but this is amazing. - Louise Belcher">
       <button id="comment">Comment</button>
       </form>
       <ul id="unordered">
